--- a/index.html
+++ b/index.html
@@ -1,80 +1,113 @@
 <!DOCTYPE html>
 <html>
 <header>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
-        <link rel="stylesheet" href="./assets/css/style.css">
-        <title>Soft Drink Trivia</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>Soft Drink Trivia</title>
 
 
 </header>
+
 <body>
 
-<div class = "container">
+  <div class="container shimmer">
 
-    <h1>Soft Drink Trivia</h1>
-    <button id = "start-button">Start</button>
+    <div id="titleDiv">
+      <h1 id="title">The Taste Test:
+        <p id="subtitle">Soft Drink Trivia</p>
+      </h1>
+      <p id="intro">A few questions to refresh your soft drink knowledge.</p>
 
-    <div id = "second-page">
-    <div id = "show-timer">45 </div> <span>seconds</span>
+      <div class="d-flex align-items-end flex-column">
 
-    <form action = "" method = "get" class = "q1">
-        <h4>What is the oldest soft drink in the United States?</h4>
-        <input type="radio" name="q1" id="q1-radio" value="false">Coca-Cola<span></span>
-        <input type="radio" name="q1" id="q1-radio" value="true"> Dr. Pepper<span></span>
-        <input type="radio" name="q1" id="q1-radio" value="false"> IBC Root Beer
-        <input type="radio" name="q1" id="q-radio" value="false">Sprite<br>
-        <!-- <input type="submit" id = "submitQ1"> -->
-      <!-- </form>  -->
+        <div class="mt-auto p-2">
+          <br>
+          <button type="button" class="btn btn-secondary btn-lg pull-right" id="start-button">Start</button>
 
-      <!-- <form action = "" method = "get" class = "q2"> -->
-        <h4>What was Pepsi Cola originally called?</h4>
-        <input type="radio" name="q2" id="q2-radio" value="false">Yum Yum<span></span>
-        <input type="radio" name="q2" id="q2-radio" value="false"> Black Gold<span></span>
-        <input type="radio" name="q2" id="q2-radio" value="true"> Brad's Drink
-        <input type ="radio" name ="q2" id="q2-radio" value="false">Sparkle<br>
-        <!-- <input type="submit" id = "submitQ2"> -->
-      <!-- </form>  -->
 
-      <!-- <form action = "" method = "get" class = "q3"> -->
-        <h4>Where is Cheerwine produced?</h4>
-        <input type="radio" name="q3" id="q3-radio" value="true">North Carolina<span></span>
-        <input type="radio" name="q3" id="q3-radio" value="false"> Montana<span></span>
-        <input type="radio" name="q3" id="q3-radio" value="false"> Florida
-        <input type ="radio" name ="q3" id="q3-radio" value="false">New Hampshire<br>
-        <!-- <input type="submit" id = "submitQ3"> -->
-      <!-- </form>  -->
+        </div>
+      </div>
+    </div>
 
-      <!-- <form action = "" method = "get" class = "q4"> -->
-        <h4>Which flavor was NOT produced by Jones Soda Company?</h4>
-        <input type="radio" name="q4" id="q4-radio" value="false">Chocolate Fudge<span></span>
-        <input type="radio" name="q4" id="q4-radio" value="false"> Fun<span></span>
-        <input type="radio" name="q4" id="q4-radio" value="true"> Marshmallow
-        <input type="radio" name="q4" id="q4-radio" value="false">Turkey & Gravy<br>
-        <input type="submit" id = "submit">
-      </form> 
+
+
+    <div id="second-page">
+        <h1>The Taste Test</h1>
+        <hr>
+        <br><br>
+      <div class="row">
+        <div class="col-md-4">
+          <div id="show-timer" class="timerLabel">45 </div> <span class="timerLabel">seconds</span>
+        </div>
+
+        <div class="col-md-8">
+
+          <form action="" method="get" class="q1">
+            <h4>What is the oldest soft drink in the United States?</h4>
+            <input type="radio" name="q1" id="q1-radio" value="false">Coca-Cola<span></span>
+            <input type="radio" name="q1" id="q1-radio" value="true"> Dr. Pepper<span></span>
+            <input type="radio" name="q1" id="q1-radio" value="false"> IBC Root Beer
+            <input type="radio" name="q1" id="q-radio" value="false">Sprite<br>
+            <!-- <input type="submit" id = "submitQ1"> -->
+            <!-- </form>  -->
+            <hr>
+
+            <!-- <form action = "" method = "get" class = "q2"> -->
+            <h4>What was Pepsi Cola originally called?</h4>
+            <input type="radio" name="q2" id="q2-radio" value="false">Yum Yum<span></span>
+            <input type="radio" name="q2" id="q2-radio" value="false"> Black Gold<span></span>
+            <input type="radio" name="q2" id="q2-radio" value="true"> Brad's Drink
+            <input type="radio" name="q2" id="q2-radio" value="false">Sparkle<br>
+            <!-- <input type="submit" id = "submitQ2"> -->
+            <!-- </form>  -->
+            <hr>
+
+            <!-- <form action = "" method = "get" class = "q3"> -->
+            <h4>Where is Cheerwine produced?</h4>
+            <input type="radio" name="q3" id="q3-radio" value="true">North Carolina<span></span>
+            <input type="radio" name="q3" id="q3-radio" value="false"> Montana<span></span>
+            <input type="radio" name="q3" id="q3-radio" value="false"> Florida
+            <input type="radio" name="q3" id="q3-radio" value="false">New Hampshire<br>
+            <!-- <input type="submit" id = "submitQ3"> -->
+            <!-- </form>  -->
+            <hr>
+
+            <!-- <form action = "" method = "get" class = "q4"> -->
+            <h4>Which flavor was NOT produced by Jones Soda Company?</h4>
+            <input type="radio" name="q4" id="q4-radio" value="false">Chocolate Fudge<span></span>
+            <input type="radio" name="q4" id="q4-radio" value="false"> Fun<span></span>
+            <input type="radio" name="q4" id="q4-radio" value="true"> Marshmallow
+            <input type="radio" name="q4" id="q4-radio" value="false">Turkey & Gravy<br>
+            <br>
+            <input type="submit" id="submit">
+          </form>
+          <br>
+        </div>
+      </div>
+    </div>
+
+    <div id="third-page">
+        <h1>The Taste Test</h1>
+        <hr>
+        <br><br>
+
+      <h2>Results</h2>
+      <h4>Correct: <span id="correct-display"></span></h4>
+      <h4>Incorrect: <span id="incorrect-display"></span> </h4>
+      <h4>Unanswered: <span id="unanswered-display"></span></h4>
       <br>
-      </div>
+      <button type="button" class="btn btn-secondary btn-lg pull-right" id="restart-button">Restart</button>
+    </div>
 
-      <div id = "third-page">
 
-        
-        <h2>Results</h2>
-        <h4>Correct: <span id = "correct-display"></span></h4>
-        <h4>Incorrect: <span id = "incorrect-display"></span> </h4>
-        <h4>Unanswered: <span id = "unanswered-display"></span></h4>
-        <br>
-        <button id = "restart-button">Restart</button>
-      </div>
-      
+  </div>
 
-</div>
-
-    <!-- Linking to our JavaScript file. -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
+  <!-- Linking to our JavaScript file. -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="assets/javascript/app.js"></script>
 
 </body>
 
